<resources>
    <string name="app_name">项目经理</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="loading">加载中...</string>

    <string name="setting">设置</string>

    <string name="msg">通知</string>
    <string name="rs_wallet">钱包</string>
    <string name="rs_integral">积分</string>
    <string name="rs_achievement">成就</string>
    <string name="help_center">使用说明</string>

    <string name="pro_management">项目管理</string>

    <string name="suggest_and_complain">投诉与建议</string>

    <string name="to_evaluate">去评价</string>

    <string name="to_orders">去接单</string>

    <string name="please_input_suggest_and_complain">请输入投诉或建议信息...</string>

    <string name="exit">退出登录</string>

    <string name="add">添加</string>

    <string name="upd_password">修改密码</string>
    <string name="version">版本</string>

    <string name="please_input_search_content">请输入搜索内容</string>
    <string name="phone_num">手机号</string>
    <string name="please_input_phone_num">请输入手机号</string>
    <string name="verification_code">验证码</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="old_password">原始密码</string>
    <string name="please_input_old_password">请输入原始密码</string>
    <string name="password">密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="new_password">新密码</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="verification_code_login">验证码登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login">登录</string>
    <string name="new_user_register">新用户注册</string>

    <string name="new_worker_user_register">工人注册</string>
    <string name="referral_code">推荐码</string>
    <string name="please_input_referral_code">请输入推荐码</string>
    <string name="read_and_agree">我已阅读并同意</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="confirm">确定</string>
    <string name="submit">提交</string>

    <string name="client">客户</string>
    <string name="wallet">钱包</string>
    <string name="home">首页</string>
    <string name="more">更多</string>
    <string name="find">发现</string>
    <string name="mine">我</string>

    <string name="serial_number">编号：</string>

    <string name="head_photo">头像</string>
    <string name="name">姓名</string>
    <string name="ic_card_num">身份证号</string>
    <string name="gender">性别</string>
    <string name="age">年龄</string>
    <string name="birthday">生日</string>
    <string name="phone">电话</string>
    <string name="mailbox">邮箱</string>
    <string name="area">地区</string>

    <string name="has_withdraw">已提现</string>
    <string name="balance">余额</string>

    <string name="this_month">本月</string>
    <string name="month_income">累计</string>

    <string name="bank_num">银行账号</string>
    <string name="bank_card">银行卡</string>
    <string name="please_bind_yourself_bank_card">请绑定持卡人本人的银行卡</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="please_input_name_importance">请输入姓名(必填)</string>
    <string name="please_input_phone_num_importance">请输入手机号(必填)</string>
    <string name="please_input_bank_card_num">请输入银行卡号</string>
    <string name="please_choice_bank">请选择开户行</string>
    <string name="bank_name">开户行</string>
    <string name="bank_master">开户人</string>
    <string name="bank_address">开户行地址</string>
    <string name="sub">提交</string>
    <string name="tip_one">• 请认真填写本人银行卡号</string>
    <string name="tip_two">• 如有错误后果由自己承担</string>
    <string name="my_balance">我的余额</string>
    <string name="withdraw_deposit">提现</string>
    <string name="first_withdraw_deposit_set_pwd">首次提现设置体现密码</string>
    <string name="please_set_bank_pwd">请慎重设置密码</string>
    <string name="withdraw_deposit_pwd">提现密码</string>
    <string name="set_pwd">设置密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="to_bank_card">到账银行卡</string>
    <string name="withdraw_deposit_price">提现金额</string>
    <string name="please_input_withdraw_deposit_price">请输入提现金额</string>
    <string name="please_input_withdraw_deposit_pwd">请输入提现密码</string>

    <string name="emergency_contact">紧急联系人</string>
    <string name="relation">关系</string>

    <string name="client_name">客户姓名</string>
    <string name="phone_number">手机号码</string>
    <string name="company_name">公司名称</string>
    <string name="acreage">面积(㎡)</string>
    <string name="measure_location">量房地址</string>
    <string name="client_type">客户类型</string>
    <string name="wx_number">微信号</string>
    <string name="tc_type">套餐选择</string>

    <string name="please_input_company_name">请输入公司名称</string>
    <string name="please_input_acreage">请输入面积</string>
    <string name="please_input_measure_location">请输入量房地址</string>
    <string name="please_input_wx_number">请输入微信号</string>

    <!--项目经理-->
    <string name="prepare">开工准备</string>
    <string name="routing">项目自查</string>
    <string name="disbursement">人工支款</string>
    <string name="mas">材料下单</string>
    <string name="mat">订单查询</string>
    <string name="camera">摄像头管理</string>
    <string name="pro_name">项目款</string>
    <string name="shop_cart">购物车</string>
    <string name="ready">准备</string>

    <string name="road_work">施工业务</string>
    <string name="material_science">材料</string>
    <string name="Money">款项</string>
    <string name="craft">工艺</string>
    <string name="process">工序</string>

    <string name="step_name">步骤名称：</string>
    <string name="craft_name">工艺名称：</string>
    <string name="step_desc">验收标准：</string>

    <!--支款-->
    <string name="disbursement_standard_way">支款流程:</string>
    <string name="disbursement_explain">支款说明:</string>
    <string name="has_know_disbursement_standard">我已了解入驻标准</string>
    <string name="disbursement_standard">《支款标准》</string>
    <string name="disbursement_step">《支款流程》</string>
    <string name="agree">同意</string>

    <string name="disbursement_sum">支款总计</string>
    <string name="person_sum">人工总计</string>
    <string name="mat_sum">材料总计</string>

    <string name="punish">《施工现场管理处罚制度》</string>
    <string name="manage">《施工现场管理制度》</string>
    <string name="pm_punish">《项目经理管理处罚制度》</string>
    <string name="pm_manage">《项目经理管理制度》</string>

    <string name="usable">可用</string>
    <string name="pro_punish_money">项目罚款</string>
    <string name="disbursement_num">申请金额</string>
    <string name="money">金额</string>
    <string name="disbursement_content">请描述现场实际施工进度，以及所施工项内容，如：现场施工进度55%，隐蔽工程结束并已验收合格，油工已进场施工，预计本周五完成油工作业，并且填写今日现场总人数...</string>

    <string name="person_count">工人人数</string>
    <string name="number">数量</string>

    <string name="mat_merchant_join">合作材料商入驻</string>
    <string name="free_join">平台加盟</string>
    <string name="task">任务</string>
    <string name="reward_punish_record">奖罚记录</string>
    <string name="pro_money">项目款</string>

    <string name="all">全部</string>
    <string name="reward">奖励</string>
    <string name="punish_money">罚款</string>

    <string name="least_fifty_count">至少15张</string>
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>

    <string name="picker_sure">确定</string>
    <string name="picker_cancel">取消</string>
    <string name="picker_title">选择时间</string>

    <string name="picker_year">年</string>
    <string name="picker_month">月</string>
    <string name="picker_day">日</string>
    <string name="picker_hour">时</string>
    <string name="picker_minute">分</string>


    <string name="alls">ALL</string>
    <string name="year_month_day">YEAR-MONTH-DAY</string>
    <string name="year_month">YEAR-MONTH</string>
    <string name="month_day_hour_minute">MONTH-DAY-HOUR-MINUTE</string>
    <string name="hour_minute">HOUR-MINUTE</string>
    <string name="project_information">项目资料</string>
    <string name="project_introduction">项目简介</string>
    <string name="engineering_quantity">工程量</string>
    <string name="construction_plans">施工图</string>
    <string name="efund">退单</string>
    <string name="sign_agreement">签署协议</string>
    <string name="head_partyA">甲方负责人</string>
    <string name="designername">设计师姓名</string>
    <string name="special_requirements">特殊要求</string>
    <string name="Purchasematerials">负责人电话</string>
    <string name="personcharge">代购主材费</string>
</resources>
