<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    android:orientation="vertical"
    android:padding="24px"
    tools:context="com.rxjy.pm.activity.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="222px"
        android:layout_height="70px"
        android:layout_gravity="center"
        android:layout_marginTop="138px"
        android:src="@mipmap/logo_icon" />

    <RelativeLayout
        android:id="@+id/rl_phone_num"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/iv_logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/iv_phone_icon"
            android:layout_width="54px"
            android:layout_height="54px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:src="@mipmap/phone_icon" />

        <TextView
            android:id="@+id/tv_phone_text"
            android:layout_width="130px"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:layout_toRightOf="@id/iv_phone_icon"
            android:text="@string/phone_num"
            android:textColor="@color/colorBlackLight"
            android:textSize="@dimen/text_size_l" />

        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_phone_text"
            android:background="@null"
            android:hint="@string/please_input_phone_num"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/colorBlackLight"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/text_size_l" />

        <ImageView
            android:id="@+id/iv_phone_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20px"
            android:src="@mipmap/account_down_arrow_icon" />

        <TextView
            android:id="@+id/tv_old_password_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@drawable/selector_input_line"
            android:enabled="false" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_code"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="100px">

        <ImageView
            android:id="@+id/iv_verification_code_icon"
            android:layout_width="54px"
            android:layout_height="54px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:src="@mipmap/verification_code_icon" />

        <TextView
            android:id="@+id/tv_verification_code_text"
            android:layout_width="130px"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:layout_toRightOf="@id/iv_verification_code_icon"
            android:text="@string/verification_code"
            android:textColor="@color/colorBlackLight"
            android:textSize="@dimen/text_size_l" />

        <com.rxjy.pm.widget.DownTimerButton
            android:id="@+id/btn_verification_code"
            android:layout_width="150px"
            android:layout_height="44px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_btn_sub"
            android:text="@string/get_verification_code"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_m" />

        <EditText
            android:id="@+id/et_verification_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/btn_verification_code"
            android:layout_toRightOf="@id/tv_verification_code_text"
            android:background="@null"
            android:hint="@string/please_input_verification_code"
            android:textColor="@color/colorBlackLight"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/text_size_l" />

        <TextView
            android:id="@+id/tv_verification_code_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@drawable/selector_input_line"
            android:enabled="false" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:visibility="gone"
        android:layout_below="@id/rl_phone_num">

        <ImageView
            android:id="@+id/iv_password_icon"
            android:layout_width="54px"
            android:layout_height="54px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:src="@mipmap/password_icon" />

        <TextView
            android:id="@+id/tv_password_text"
            android:layout_width="130px"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:layout_toRightOf="@id/iv_password_icon"
            android:text="@string/password"
            android:textColor="@color/colorBlackLight"
            android:textSize="@dimen/text_size_l" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_password_text"
            android:background="@null"
            android:hint="@string/please_input_password"
            android:inputType="textPassword"
            android:textColor="@color/colorBlackLight"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/text_size_l" />

        <TextView
            android:id="@+id/tv_password_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@drawable/selector_input_line"
            android:enabled="false" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_password"
        android:visibility="gone"
        android:padding="20px">

        <TextView
            android:id="@+id/tv_verification_code_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_code_login"
            android:textColor="@color/colorBlueLight"
            android:textSize="20px"
            android:layout_alignParentTop="true" />

        <!--<TextView-->
            <!--android:id="@+id/tv_forget_password"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:text="@string/forget_password"-->
            <!--android:textColor="@color/colorGrayDark"-->
            <!--android:textSize="20px" />-->

    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rl_forget_password"
        android:layout_marginTop="120px"
        android:background="@drawable/selector_btn_sub"
        android:text="@string/login"
        android:visibility="gone"
        android:textColor="@color/colorWhite"
        android:textSize="34px" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="40px"
        android:text="@string/forget_password"
        android:layout_gravity="center"
        android:textColor="@color/colorGrayDark"
        android:visibility="gone"
        android:textSize="28px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80px"
        android:visibility="gone"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_worker_user_register"
            android:textColor="@color/colorRedLight"
            android:textSize="@dimen/text_size_m" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="26px"
            android:layout_marginLeft="8px"
            android:src="@mipmap/arrow_right_icon" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28px"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="40px"
            android:textColor="@color/colorRed"
            android:text=""
            android:layout_gravity="center"
            />

    </RelativeLayout>
</LinearLayout>
